--- a/config.yaml
+++ b/config.yaml
@@ -44,7 +44,7 @@ contact: 'fboehm@protonmail.com' # FIXME
 # Example -------------
 #
 # episodes:
-# - introduction.md
+ - workflowr-project-setup.Rmd
 # - first-steps.md
 #
 # learners:
