--- a/config.yaml
+++ b/config.yaml
@@ -63,7 +63,8 @@ episodes:
 - workflowr-project-setup.Rmd  
 - build-site.Rmd  
 - publish-website.Rmd  
-- exploratory-data-analysis.Rmd  
+- exploratory-data-analysis.Rmd   
+- resources.Rmd  
 
 # Information for Learners
 learners: 
